# rules_blender

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  get_blender_sha256.nu  index.bzl  repo.bzl
.github/workflows/: ci.bazelrc  ci.yml  main.yml
blender/: extensions.bzl  repositories.bzl  toolchain.bzl
blender_linux/: BUILD.bazel
blender_macos/: BUILD.bazel
blender_windows64/: BUILD.bazel
blender_worker/: BUILD.bazel  blender_worker.cc  blender_worker.py
docs/: README.md  index.md  repo.md
example/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  example.blend
rules_blender_scripts/: BUILD.bazel  bazel_blender_render_worker.py  bazel_check_linked.py
test/: BUILD.bazel  test.blend  verticies_count.py
