load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bzlws//:index.bzl", "bzlws_copy")

package(default_visibility = ["//visibility:public"])
exports_files(["index.bzl", "repo.bzl"])

stardoc(
    name = "index_docs",
    input = "index.bzl",
    out = "index.md",
)

stardoc(
    name = "repo_docs",
    input = "repo.bzl",
    out = "repo.md",
)

bzlws_copy(
    name = "copy_docs",
    out = "docs/{FILENAME}",
    force = True,
    srcs = [
        ":index_docs",
        ":repo_docs",
    ],
)
