load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_compdb//:aspects.bzl", "compilation_database")
load("@bzlws//:index.bzl", "bzlws_copy")

package(default_visibility = ["//visibility:public"])
exports_files(["index.bzl", "repo.bzl"])

stardoc(
    name = "index_docs",
    input = "index.bzl",
    out = "index.md",
)

stardoc(
    name = "repo_docs",
    input = "repo.bzl",
    out = "repo.md",
)

bzlws_copy(
    name = "copy_docs",
    out = "docs/{FILENAME}",
    force = True,
    srcs = [
        ":index_docs",
        ":repo_docs",
    ],
)

compilation_database(
    name = "compdb",
    testonly = True,
    disable = select({
        "@bazel_tools//tools/cpp:msvc": True,
        "//conditions:default": False,
    }),
    targets = [
        "//blender_worker",
    ],
)

bzlws_copy(
    name = "compile_commands",
    testonly = True,
    out = "{FILENAME}",
    srcs = [":compdb"],
    substitutions = {
        "@bzlws//info:execution_root": "__EXEC_ROOT__",
    },
)
